add html presentation system

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -5,6 +5,10 @@
     <title>Presentations</title>
 </head>
 <body>
-    Presentations
+    <h1>Presentations</h1>
+
+    <p>
+        <a href="clean_code.html">Clean Code</a>
+    </p>
 </body>
 </html>
