add code coop presentation

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -10,5 +10,9 @@
     <p>
         <a href="clean_code.html">Clean Code</a>
     </p>
+
+    <p>
+        <a href="code_coop.html"></a>Code Coopération</a>
+    </p>
 </body>
 </html>
