fix code coop pres

--- a/presentations/code_coop.html
+++ b/presentations/code_coop.html
@@ -32,48 +32,52 @@
 					<h4>Peut s'appliquer dans d'autre domaines</h4>
 				</section>
 				<section>
-					<h1>Sommaire</h1>
+					<h2>Sommaire</h2>
 
 					<ul>
 						<li>Demander de l'aide</li>
-						<li>Canard en plastique></li>
+						<li>Canard en plastique</li>
 						<li>Code review</li>
 						<li>Peer Programming</li>
 						<li>Communication</li>
 					</ul>
 				</section>
 				<section>
-					<h1>Demander de l'aide (pour le demandeur)</h1>
+					<h2>Demander de l'aide (pour le demandeur)</h2>
 
 					<ul>
 						<li>NE VOUS INQUIETEZ PAS ! VOUS NE NOUS DERANGEZ PAS !</li>
-						<li>Essayer d'exprimer votre besoin premier</li>
+						<li>demander à un groupe</li>
+						<li>chercher à plusieurs est souvent plus efficace</li>
+						<li>essayer d'exprimer votre besoin premier</li>
+						<li>changer de sujet</li>
 					</ul>
 				</section>
 				<section>
-					<h1>Demander de l'aide (pour le demandé)</h1>
+					<h2>Demander de l'aide (pour le demandé)</h2>
 
 					<ul>
 						<li>SOYEZ DISPONIBLE !</li>
-						<li>Essayer de résoudre le besoin premier</li>
+						<li>essayer de résoudre le besoin premier</li>
+						<li>redigirer vers personnes adéquates</li>
 					</ul>
 				</section>
 				<section>
-					<h1>Canard en plastique</h1>
+					<h2>Canard en plastique</h2>
 					<h3>Rubber duck debugging</h3>
 
 					<ul>
-						<li>Expliquer votre problème à quelqu'un </li>
+						<li>Expliquer votre problème à quelqu'un</li>
 						<li>Prendre du recul</li>
 						<li>Anecdote du chat de Jack H. Hetherington</li>
 					</ul>
 				</section>
 				<section>
-					<p>Code review</p>
-					<p class='fragment'>aussi appelé peer review</p>
+					<p>Peer review</p>
+					<p class='fragment'>quelque fois raccourcis en code review</p>
 				</section>
 				<section>
-					<h1>Code review - les bénefices</h1>
+					<h2>Code review - les bénefices</h2>
 
 					<ul>
 						<li>partage de connaissance</li>
@@ -82,7 +86,7 @@
 					</ul>
 				</section>
 				<section>
-					<h1>Code review - comment faire ?</h1>
+					<h2>Code review - comment faire ?</h2>
 
 					<ul>
 						<li>demander et donner son avis</li>
@@ -92,7 +96,7 @@
 					</ul>
 				</section>
 				<section>
-					<h1>Peer programming - les bénéfices</h1>
+					<h2>Peer programming - les bénéfices</h2>
 
 					<ul>
 						<li>partage de connaissance</li>
@@ -102,7 +106,7 @@
 					</ul>
 				</section>
 				<section>
-					<h1>Peer programming - mise en place</h1>
+					<h2>Peer programming - coment faire ?</h2>
 
 					<ul>
 						<li>Un seul ordinateur</li>
@@ -110,7 +114,7 @@
 					</ul>
 				</section>
 				<section>
-					<h1>Peer programming - mise en place à distance</h1>
+					<h2>Peer programming - comment faire à distance ?</h2>
 
 					<ul>
 						<li>Visio conférence</li>
@@ -118,10 +122,12 @@
 					</ul>
 				</section>
 				<section>
-					<h1>Communication</h1>
+					<h2>Communication</h2>
 
 					<ul>
 						<li>le plus souvent possible</li>
+						<li>ne pas hésiter à changer de canal pour plus d'efficacité</li>
+						<li>mail => chat => voix</li>
 						<li>attention à l'isolement</li>
 					</ul>
 				</section>
