fix code coop pres

--- a/presentations/code_coop.html
+++ b/presentations/code_coop.html
@@ -37,7 +37,7 @@
 					<ul>
 						<li>Demander de l'aide</li>
 						<li>Canard en plastique</li>
-						<li>Code review</li>
+						<li>Peer review</li>
 						<li>Peer Programming</li>
 						<li>Communication</li>
 					</ul>
@@ -50,7 +50,7 @@
 						<li>demander à un groupe</li>
 						<li>chercher à plusieurs est souvent plus efficace</li>
 						<li>essayer d'exprimer votre besoin premier</li>
-						<li>changer de sujet</li>
+						<li>faire autre chose en attendant</li>
 					</ul>
 				</section>
 				<section>
@@ -59,7 +59,7 @@
 					<ul>
 						<li>SOYEZ DISPONIBLE !</li>
 						<li>essayer de résoudre le besoin premier</li>
-						<li>redigirer vers personnes adéquates</li>
+						<li>rediriger vers personnes adéquates</li>
 					</ul>
 				</section>
 				<section>
@@ -73,8 +73,8 @@
 					</ul>
 				</section>
 				<section>
-					<p>Peer review</p>
-					<p class='fragment'>quelque fois raccourcis en code review</p>
+					<h2>Peer review</h2>
+					<h3 class='fragment'>quelque fois raccourcis en code review</h3>
 				</section>
 				<section>
 					<h2>Code review - les bénefices</h2>
@@ -110,15 +110,14 @@
 
 					<ul>
 						<li>Un seul ordinateur</li>
-						<li>Chacun code à son tour</li>
+						<li>Chacun touche au clavier à son tour</li>
 					</ul>
 				</section>
 				<section>
 					<h2>Peer programming - comment faire à distance ?</h2>
 
 					<ul>
-						<li>Visio conférence</li>
-						<li>Un seul partage son écran</li>
+						<li>partage d'écran</li>
 					</ul>
 				</section>
 				<section>
