fix code coop pres

--- a/presentations/code_coop.html
+++ b/presentations/code_coop.html
@@ -77,7 +77,7 @@
 					<h3 class='fragment'>quelque fois raccourcis en code review</h3>
 				</section>
 				<section>
-					<h2>Code review - les bénefices</h2>
+					<h2>Peer review - les bénefices</h2>
 
 					<ul>
 						<li>partage de connaissance</li>
@@ -86,12 +86,13 @@
 					</ul>
 				</section>
 				<section>
-					<h2>Code review - comment faire ?</h2>
+					<h2>Peer review - comment faire ?</h2>
 
 					<ul>
-						<li>demander et donner son avis</li>
-						<li>relire</li>
-						<li>tester</li>
+						<li>partager ses idées</li>
+						<li>donner son avis</li>
+						<li>relire le code</li>
+						<li>tester le code</li>
 						<li class="fragment">EGOLESS !</li>
 					</ul>
 				</section>
@@ -102,20 +103,18 @@
 						<li>partage de connaissance</li>
 						<li>mise en commun d'habitudes et de pratiques</li>
 						<li>harmoniser les pratiques de l'équipe</li>
-						<li class='fragment'>plus rapide plus efficace mais plus couteux en temps</li>
+						<li class='fragment'>plus couteux en temps mais plus efficace</li>
 					</ul>
 				</section>
 				<section>
 					<h2>Peer programming - coment faire ?</h2>
 
+					<p>Sur site</p>
 					<ul>
 						<li>Un seul ordinateur</li>
 						<li>Chacun touche au clavier à son tour</li>
 					</ul>
-				</section>
-				<section>
-					<h2>Peer programming - comment faire à distance ?</h2>
-
+					<p>A distance</p>
 					<ul>
 						<li>partage d'écran</li>
 					</ul>
