--- a/presentations/code_coop.html
+++ b/presentations/code_coop.html
@@ -107,16 +107,20 @@
 					</ul>
 				</section>
 				<section>
-					<h2>Peer programming - coment faire ?</h2>
+					<h2>Peer programming - comment faire ?</h2>
 
-					<p>Sur site</p>
 					<ul>
-						<li>Un seul ordinateur</li>
-						<li>Chacun touche au clavier à son tour</li>
-					</ul>
-					<p>A distance</p>
-					<ul>
-						<li>partage d'écran</li>
+						<li>Sur site
+							<ul>
+								<li>Un seul ordinateur</li>
+								<li>Chacun touche au clavier à son tour</li>
+							</ul>
+						</li>
+						<li>A distance
+							<ul>
+								<li>partage d'écran</li>
+							</ul>
+						</li>
 					</ul>
 				</section>
 				<section>
