--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Sommaire</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-<a href="/blog/index.html">Blog</a>
-<a href="/presentations/index.html">Présentations</a>
+<body class="antialiased text-[#eee8d5] dark:text-slate-400 bg-[#002b36]">
+
+    <div class="max-w-7xl mx-auto px-4 py-4">
+        <div class="flex items-center justify-between">
+            <div class="flex space-x-4">
+                <!-- Logo -->
+                <div>
+                    <a href="index.html" class="text-white text-xl font-bold">CodisArt</a>
+                </div>
+                <!-- Navigation Links -->
+
+                <nav class="flex space-x-4">
+                    <a class="text-white hover:text-gray-300" href="blog/index.html">Blog</a>
+                    <a class="text-white hover:text-gray-300" href="presentations/index.html">Présentations</a>
+                </nav>
+            </div>
+            <!-- Mobile Menu Button (Hidden on Desktop) -->
+            <div class="md:hidden">
+                <button class="text-white focus:outline-none">
+                    <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Your content goes here -->
+
 </body>
 </html>
+
+
+
