--- a/presentations/index.html
+++ b/presentations/index.html
@@ -3,16 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Presentations</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>Presentations</h1>
+<body class="antialiased text-[#eee8d5] dark:text-slate-400 bg-[#002b36]">
 
-    <p>
-        <a href="clean_code.html">Clean Code</a>
-    </p>
+    <div class="py-4">
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="flex items-center justify-between">
+                <div class="flex space-x-4">
+                    <!-- Logo -->
+                    <div>
+                        <a href="../index.html" class="text-white text-xl font-bold">CodisArt</a>
+                    </div>
+                    <!-- Navigation Links -->
 
-    <p>
-        <a href="code_coop.html"></a>Code Coopération</a>
-    </p>
+                    <nav class="flex space-x-4">
+                        <a class="text-white hover:text-gray-300" href="blog/index.html">Blog</a>
+                        <a class="text-white hover:text-gray-300" href="presentations/index.html">Présentations</a>
+                    </nav>
+                </div>
+                <!-- Mobile Menu Button (Hidden on Desktop) -->
+                <div class="md:hidden">
+                    <button class="text-white focus:outline-none">
+                        <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="px-10 grid grid-cols-4 gap-10">
+        <a class="-py-4" href="clean_code.html"><img alt="Clean Code" src="clean_code.thumbnail.png" /></a>
+        <a href="code_coop.html"><img alt="Code Coopération" src="code_coop.thumbnail.png" /></a>
+        <a href="code_to_software.html"><img alt="Code to software" src="code_to_software.thumbnail.png" /></a>
+        <a href="git.html"><img alt="Git" src="git.thumbnail.png" /></a>
+        <a href="bitmasks.html"><img alt="Bitmasks" src="bitmasks.thumbnail.png" /></a>
+    </div>
 </body>
-</html>
